--- a/index.ipynb
+++ b/index.ipynb
@@ -259,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "permutation(16)/\n",
     "# your code here  # the answer is 63063000.0"
    ]
   },
