--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "permutation(16)/\n",
+    "permutation(16)/permutation()\n",
     "# your code here  # the answer is 63063000.0"
    ]
   },
