--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "permutation(16,4)\n",
+    "permutation(16)/4\n",
     "# your code here  # the answer is 63063000.0"
    ]
   },
